# Diversitree

./: .cproject  .project  .qmake.stash  10p100023588.txt  10p1000air03.txt  10p1000bell5.txt  10p1000dcmulti.txt  10p1000fiber.txt  10p1000fixnet6.txt  10p1000gen.txt  10p1000gesa3.txt  10p1000gt2.txt  10p1000khb05250.txt  10p1000l152lav.txt  10p1000misc03.txt  10p1000misc06.txt  10p1000mod008.txt  10p1000mod010.txt  10p1000neos-1425699.txt  10p1000nexp-50-20-1-1.txt  10p1000p0033.txt  10p1000p0201.txt  10p1000p0548.txt  10p1000pp08a.txt  10p1000pp08aCUTS.txt  10p1000qnet1.txt  10p1000qnet1_o.txt  10p1000rgn.txt  10p1000set1ch.txt  10p1000sp150x300d.txt  10p1000stein27.txt  10p1000stein45.txt  10p1000vpm1.txt  10p1000vpm2.txt  10p10023588.txt  10p100fiber.txt  10p100fixnet6.txt  10p100gen.txt  10p100neos-1425699.txt  10p100nexp-50-20-1-1.txt  (+920 more)
.metadata/: version.ini
TestSet-BFS/: 23588_SCIP_bfs_percNO_0.010000_reqNS_100_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.010000_reqNS_10_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.010000_reqNS_50_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.020000_reqNS_1000_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.020000_reqNS_100_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.020000_reqNS_10_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.020000_reqNS_200_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.020000_reqNS_50_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.030000_reqNS_1000_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.030000_reqNS_100_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  23588_SCIP_bfs_percNO_0.030000_reqNS_10_alpha_0.000000_beta_0.000000_solCut_0.000000_depthCut_0.000000.csv  SCIP_Runtime_percNO_0.010000_.csv  SCIP_Runtime_percNO_0.020000_.csv  (+362 more)
cplexOptions/: cplex.opt
(+2978 files in other folders)
